unpackaged/main/default/objects/Notificacion__c/Notificacion__c.object-meta.xml
<CustomObject>
    <label>Notificación</label>
    <nameField>
        <displayFormat>NOT-{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notificaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>