unpackaged/main/default/objects/Notificacion__c/fields/Aviso__c.field-meta.xml
<CustomField>
    <fullName>Aviso__c</fullName>
    <label>Aviso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falta aviso de retención</fullName>
            </value>
            <value>
                <fullName>Cliente desperfilado</fullName>
            </value>
            <value>
                <fullName>Cliente no se localiza</fullName>
            </value>
            <value>
                <fullName>Solicitud de Cambios en el Valod de Operación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>