unpackaged/main/default/objects/Notificacion__c/fields/Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Cobranza_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobranza Comercial</label>
    <referenceTo>Cobranza_Comercial__c</referenceTo>
    <relationshipLabel>Notificaciones</relationshipLabel>
    <relationshipName>Notificaciones</relationshipName>
    <type>Lookup</type>
</CustomField>