unpackaged/main/default/objects/Notificacion__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>