unpackaged/main/default/objects/Notificacion__c/fields/Folio_CC__c.field-meta.xml
<CustomField>
    <fullName>Folio_CC__c</fullName>
    <label>Folio CC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>