unpackaged/main/default/objects/Notificacion__c/fields/Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Mensaje__c</fullName>
    <label>Mensaje</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>