unpackaged/main/default/objects/Notificacion__c/fields/Notificacion_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Notificacion_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Notificacion__c/&quot;&amp; Id &amp;&quot;/view&quot;, Name &amp;&quot; - &quot;&amp; TEXT(Notificacion__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notificación</label>
    <type>Text</type>
</CustomField>