unpackaged/main/default/objects/Notificacion__c/fields/Para__c.field-meta.xml
<CustomField>
    <fullName>Para__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Para</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notificaciones</relationshipName>
    <type>Lookup</type>
</CustomField>