unpackaged/main/default/objects/Notificacion__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Notificaciones</relationshipLabel>
    <relationshipName>Notificaciones</relationshipName>
    <type>Lookup</type>
</CustomField>