unpackaged/main/default/objects/Notificacion__c/fields/Respuesta_del_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_del_Asesor__c</fullName>
    <label>Respuesta del Asesor</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>