unpackaged/main/default/objects/Notificacion__c/fields/URL_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>URL_Notificacion__c</fullName>
    <formula>&quot;https://javer--preprod.sandbox.lightning.force.com/lightning/r/Notificacion__c/&quot;&amp; Id &amp; &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Notificación</label>
    <type>Text</type>
</CustomField>